Fix positioning of background and post text to prevent overlaps

--- a/poketimes/src/index.css
+++ b/poketimes/src/index.css
@@ -12,10 +12,11 @@ nav a.active {
 .home .post img {
   position: absolute;
   top: 20px;
-  left: -20px;
+  left: -100px;
   opacity: 0.6;
 }
 
 .home .post {
   overflow: hidden;
+  padding-left: 80px;
 }
